[package]
name = "bevy_ase"
version = "0.2.0"
authors = ["Bruce Reif", "alpine_alpaca <alpine.alpaca.games@gmail.com>", ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
asefile = { git = "https://github.com/B-Reif/asefile", rev = "4bb33e1398461b3d153d99ab0830bb87f347dce2" }
anyhow = "1.0"
benimator = { version = "3.0", optional = true }
bevy_ecs_tilemap = { version = "0.6", git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "6796c2355b75fa383fa4067443413f8bbe4a2956", optional = true }

[profile.dev.package."*"]
opt-level = 2

[[example]]
name = "animated"
required-features = ["benimator"]

[[example]]
name = "tilemap"
required-features = ["bevy_ecs_tilemap"]